@@ -1,3 +1,7 @@
+2001-08-19  Tige Chastain (tigechastain@home.com)
+
+	* favorites.c: Added checking to empty hidden processes window.
+
 2001-08-19  Kevin Vandersloot <kfv101@psu.edu>
 
 	* util.c: call fork before execlp so the procman doesn't quit
@@ -769,3 +773,4 @@ Sat Aug  4 00:35:55 2001  Jonathan Blandford  <jrb@redhat.com>
 	* interface.c (toggle_infoview): toggles infoview. Beginning of 
 	pulling stuff out of callbacks.c to access gtk widgets as global
 	variables.
+
